src/CSS/landing-page.css
* {
    box-sizing: border-box;
    line-height: 1.5;
}

body,
html {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    background-color: #2d2d2d;
    font-family: "Ubuntu", sans-serif;
    color: white;
    overflow-x: hidden !important;
}

.landing-page {
    text-align: left;
    /* height: 100vh; */
}

.landing-main {
    position: relative;
    background: url("../Images/background.jpeg") no-repeat center center/cover;
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 45px;
    height: 100vh;
    width: 100%;
    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.55);
    padding: 20px;
}

.landing-main::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(90deg, transparent, rgba(0, 0, 0, 0.25));
    /* Adjust the gradient as needed */
    border-radius: 15px;
    /* Matches the parent element's border-radius */
    z-index: 1;
    /* Ensures the gradient overlay stays on top */
    pointer-events: none;
    /* Allows interaction with underlying content */
}

/* Ensure the content inside .landing-main stays on top */
.landing-main>* {
    position: relative;
    z-index: 2;
}

.fade-in-header {
    --bg-size: 200%;
    --color-one: #06beb6;
    --color-two: #753a88;
    font-family: "Inter", sans-serif;
    font-size: clamp(2rem, 15vmin, 3rem);
    background: linear-gradient(90deg,
            var(--color-one),
            var(--color-two),
            var(--color-one)) 0 0 / var(--bg-size) 100%;
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
    animation: pushRight 5s linear infinite alternate;
    height: auto;
    width: 100%;
    position: absolute;
    top: 20%;
    left: 0;
}

.header-content {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    margin-left: -80px;
}

.header-image {
    width: 400px;
    height: 700px;
}

.header-image img {
    margin-left: -100px;
    width: 500px;
    height: 100%;
    object-fit: cover;
    border-radius: 15px;
}

.header-text {
    /* width: calc(100% - 570px) !important; */
    width: 50%;
    height: 50%;

}

.next {
    /* margin-left: -1300px; */
    width: 100%;
    font-size: 30px;
    color: white;
    /* animation: slideIn 1s forwards; */
}

.scroll {
    position: absolute;
    bottom: 20px;
    left: 50%;
    transform: translateX(-50%);
    font-size: 10px;
    color: white;
    animation: fadeIn 5s forwards;
    text-align: center;
}

.landing-page-content {
    justify-content: center;
    align-items: flex-start;
    padding-top: 40px;
    position: relative;
    background: #2d2d2d;
    height: 100vh;
    width: 100%;
    display: flex;
    border-radius: 15px;
    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.55);
    /* padding: 20px; */
}

.content-container {
    height: 100%;
    width: 100%;
    /* border: 1px solid white; */
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes pushRight {
    0% {
        background-position: 0 0;
    }

    100% {
        background-position: 100% 0;
    }
}

@keyframes slideIn {
    from {
        margin-left: -1300px;
    }

    to {
        margin-left: 0;
    }
}

